--- a/package.json
+++ b/package.json
@@ -20,10 +20,32 @@
   ],
   "author": "Tobias Koppers @sokra",
   "license": "MIT",
+  "eslintConfig": {
+    "parser": "babel-eslint",
+    "ecmaFeatures": {
+      "jsx": true,
+      "modules": true
+    },
+    "env": {
+      "browser": true,
+      "node": true,
+      "es6": true
+    },
+    "rules": {
+      "strict": 0,
+      "no-underscore-dangle": 0,
+      "semi": 1,
+      "quotes": [0, "single"],
+      "no-unused-vars": 1,
+      "curly": 1
+    }
+  },
   "dependencies": {
     "async": "^0.9.0",
     "babel-core": "^5.0.12",
     "babel-loader": "^5.0.0",
+    "babel-eslint": "^2.0.2",
+    "eslint": "^0.18.0",
     "body-parser": "^1.9.3",
     "css-loader": "^0.11.0",
     "express": "^4.7.2",
